# aria

./: .gitignore  BOOTSTRAP.md  README.md
.github/workflows/: eval.yml  terraform-plan.yml
agents/: README.md
agents/cluster-diagnostics/: agent.yaml
agents/incident-commander/: agent.yaml
agents/investigation-loop/: .env.example  Dockerfile  README.md  agent.yaml  pyproject.toml
agents/investigation-loop/investigation_agent/: agent-card.json  agent.py  cli.py  graph.py  main.py
charts/namespace-bootstrap/: Chart.yaml  values.yaml
charts/namespace-bootstrap/templates/: limitrange.yaml  namespace.yaml  resourcequota.yaml  rolebinding.yaml  serviceaccount.yaml
docs/: README.md  repo-structure.md  scenarios.md
envs/: dev.yaml
eval/: Dockerfile  README.md  cluster-diagnostics.promptfooconfig.yaml  incident-commander.promptfooconfig.yaml  investigation-loop.promptfooconfig.yaml  job.yaml  run-all.sh
eval/transforms/: a2a-with-evidence.js  verify-loop-checkpoints.js
gitops/: README.md  root-app.yaml
gitops/apps/: agents.yaml  arc-controller.yaml  arc-runners.yaml  kagent-crds.yaml  kagent.yaml  models.yaml  namespace-bootstrap.yaml
infra/00-prereqs/: README.md  install-prereqs.ps1
infra/01-bootstrap/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/02-eks/: README.md  backend.hcl.example  backend.tf  main.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/03-argocd/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/04-persistent/: README.md  backend.hcl.example  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/argocd/: README.md  backend.hcl.example  main.tf  variables.tf  versions.tf
infra/bootstrap/: README.md  outputs.tf  versions.tf
infra/eks/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
platform/: README.md
platform/arc/: controller-values.yaml  runner-values.yaml  runner.Dockerfile
platform/kagent/: README.md  modelconfig-bedrock.yaml  values.yaml
