[project]
name = "investigation-loop"
version = "0.1.0"
description = "ARIA BYO agent: a hand-built LangGraph StateGraph demonstrating cyclic investigation (gather -> hypothesize -> verify -> loop/conclude), reusing kagent's existing MCP tool server."
requires-python = ">=3.11"
dependencies = [
    "kagent-langgraph>=0.7",
    "a2a-sdk[http-server]>=0.2",  # a2a.server.apps (A2AStarletteApplication) is gated behind this extra
    "uvicorn>=0.30",      # used directly in cli.py
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-mcp-adapters>=0.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["investigation_agent"]

[tool.setuptools.package-data]
investigation_agent = ["agent-card.json"]
