[project]
name = "investigation-loop"
version = "0.1.0"
description = "ARIA BYO agent: a hand-built LangGraph StateGraph demonstrating cyclic investigation (gather -> hypothesize -> verify -> loop/conclude), reusing kagent's existing MCP tool server."
requires-python = ">=3.11"
dependencies = [
    "kagent-langgraph>=0.7",
    # PINNED, not a floor: kagent-langgraph 0.9.11 declares a2a-sdk>=0.3.23 with NO upper bound, so
    # pip resolves the newest a2a-sdk (1.1.0) by default - but 1.x removed the a2a.server.apps module
    # (A2AStarletteApplication) that kagent-langgraph's own code hard-imports. Confirmed by inspecting
    # site-packages inside the built image: 1.1.0 has a2a.server.{routes,request_handlers,...}, no
    # `apps`. 0.3.26 is the last pre-1.0 release, before that restructure. Bump only after confirming
    # a newer kagent-langgraph declares compatibility with a newer a2a-sdk.
    "a2a-sdk[http-server]==0.3.26",
    "uvicorn>=0.30",      # used directly in cli.py
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-mcp-adapters>=0.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["investigation_agent"]

[tool.setuptools.package-data]
investigation_agent = ["agent-card.json"]
